# GeneticAlgorithm-NAS

./: .pyproject.toml.swp  .requirements.txt.swp  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-package.yml
genetic_algorithm_nas/: __init__.py  crossover.py  fitness_function.py  genetic_algorithm_nas.py  initial_population_generator.py  mutation.py  next_population_generator.py  organism.py  preprocessing.py
src/ga_neural_architecture_search/: crossover.py  errors.py  fitness_function.py  initial_population_generator.py  main.py  mutation.py  next_population_generator.py  organism.py  preprocessing.py
src/package_name.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
