[tool.poetry]
name = "genetic-algorithm-nas"
version = "0.0.0"
description = "Library of code for working with Neural Architecture Search"
authors = ["Shilash M <shilu4577@gmail.com>"]
readme = "README.md"
repository = "https://github.com/python-poetry/poetry"
documentation = "https://python-poetry.org/docs/"
keywords = ["tensorflow", "neural architecture search", "hyperparameter tuning", "nas"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Tensorflow Modules"
]
packages = [
    { include = "genetic_algorithm_nas" },
    { include = "genetic_algorithm_nas/*" },
]

[tool.poetry.urls]
Changelog = "https://python-poetry.org/history/"



[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.3"
flake8 = "^5.0.4"
numpy = ">1.22.0"
tensorflow = ">2"
pandas = ">1.4.0"
scikit-learn = ">1.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
black = "^22.8.0"
python-semantic-release = "^7.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "master"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
