[bumpversion]
current_version = 0.0.4
commit = True
tag = True

[metadata]
name = nas-ga
version = 0.0.4
author = shilash
author_email = kaushalshetty@outlook.com
description = Feature Selection using Genetic Algorithm (DEAP Framework)
license = MIT
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
url = https://featureselectionga.readthedocs.io
project_urls = 
	Source = https://github.com/kaushalshetty/FeatureSelectionGA
	Documentation = https://featureselectionga.readthedocs.io
	Changelog = https://featureselectionga.readthedocs.io/en/latest/changelog.html
classifiers = 
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
keywords = 
	feature selection
	Genetic Algorithm
	DEAP

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
include = 
	genetic_algorithm_nas
	genetic_algorithm-nas.*

#[bumpversion:file:feature_selection_ga/__init__.py]
3search = __version__ = "{current_version}"
#replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 88

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
addopts = -v -Wdefault --cov=genetic_algorithm_nas
testpaths = tests/

[tool:isort]
profile = black
known_first_party = tests,genetic_algorithm_nas
